--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 </head>
 <body>
   <h1>TP DevOps</h1>
-  <p>Page web simple <div style="color:blue;">La page s'affiche normalement</div></p>
+  <p>
+  Page web simple
+  <span style="color:blue;">La page s'affiche normalement</span>
+  </p>
+
 </body>
 </html>
