--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 </head>
 <body>
   <h1>TP DevOps</h1>
-  <p>
-  Page web simple
-  <span style="color:blue;">La page s'affiche normalement</span>
+  <p> #<div></div>
+    Page web simple
+    <span style="color:blue;">La page s'affiche normalement</span>
   </p>
 
 </body>
